--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.7",
+    "clsx": "^1.1.1",
     "firebase": "^8.3.2",
     "formik": "^2.2.8",
     "react": "^17.0.2",
