--- a/.env
+++ b/.env
@@ -6,3 +6,4 @@ REACT_APP_MESSAGING_SENDER_ID=19766876493
 REACT_APP_APP_ID=1:19766876493:web:6054a6824db3b22ea6bf04
 REACT_APP_MEASUREMENT_ID=G-Z65H8WNG3V
 REACT_APP_CONFIRMATION_EMAIL_REDIRECT=http://localhost:3000
+REACT_APP_DATABASE_URL=https://personal-trainer-manager-default-rtdb.europe-west1.firebasedatabase.app
